Clarified the text around GTK use on ubunutu.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ $ toga-demo
 <h3>
 <a name="problems-under-ubuntu" class="anchor" href="#problems-under-ubuntu"><span class="octicon octicon-link"></span></a>Problems using virtualenv under Ubuntu</h3>
 
-<p>Toga uses the system native python GTK+3 bindings for display purposes.
+<p>When on Ubuntu, Toga uses the system native python GTK+3 bindings for display purposes.
 However, if you're using a <code>--no-site-packages</code> virtualenv, the Python bindings
 for GTK won't be in your <code>PYTHONPATH</code>.</p>
 
