Added caveat on the early stage nature of the project.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 <h2>
 <a name="quickstart" class="anchor" href="#quickstart"><span class="octicon octicon-link"></span></a>Quickstart</h2>
 
+<p><i>Note: Toga is a very early stage project. The example code works best on OS X and Ubuntu; Windows support
+  is minimal. The codebase is also rapidly evolving, so if you experience problems, you may need to
+  get code from the master branch on Github, rather than relying on versions installed from PyPI.</i></p>
+
 <p>To get a demonstration of the capabilities of Toga, run the following:</p>
 
 <pre><code>$ pip install toga-demo
