--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ for GTK won't be in your <code>PYTHONPATH</code>.</p>
 
 <p>Unfortunately, you can't <code>pip install</code> GTK+ bindings, so you have to use a
 workaround. To make the system GTK+ bindings available to your virtualenv,
-symlinking the <code>gi</code> module from the system dist-packages directory into your
+symlink the <code>gi</code> module from the system dist-packages directory into your
 virtualenv's site-packages:</p>
 
 <pre><code>$ cd &lt;your virtualenv dir&gt;/lib/python2.7/site-packages
